chore(ui): small ui tweaks related to menu Should be legible now, but for some reason the inset shadow combined with the shadow is bugged on chromium-based browsers...

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,6 +19,10 @@
 		--shadow-lg:
 			0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 
+		--inset-shadow-lg:
+		    inset 0 1px 2px light-dark(rgba(0, 0, 0, 0.15), rgba(255, 255, 255, 0.15)),
+		    0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+
 		accent-color: var(--primary);
 
 		/* Motion tokens (transitions.dev) */
